# f4pga

./: .buildinfo  .editorconfig  .gitattributes  .gitcommit  .gitignore  .gitmodules  .travis.yml  CONTRIBUTING.md  COPYING  Makefile  Makefile_plugin.common  Makefile_test.common  README.md  README.rst  bank_tiles.h  community.html  enter-env.sh  environment.yml  f4pga-env  genindex.html  getting-started.html  glossary.html  how.html  index.html  objects.inv  readthedocs.yml  references.html  requirements.txt  search.html  searchindex.js  setup.py  status.html
f4pga/: CMakeLists.txt  Deprecated.html  DevNotes.html  Usage.html  __init__.py  argparser.py  cache.py  cli.py  commands.py  common.py  context.py  flow.py  flow_config.py  fpga_map.json  index.html  module.py  module_inspector.py  module_runner.py  part_db.json  part_db.yml  platforms.yml  requirements.txt  setup.py  sf_argparse.py  sf_common.py  sf_flow_config.py  sf_module.py  sf_module_inspector.py  sf_module_runner.py  sf_stage.py  sf_ugly.py  sfbuild  sfbuild.py  stage.py  ugly.py  util.py
f4pga/aux/utils/: vpr_io_place.py
f4pga/aux/utils/quicklogic/: convert_compile_opts.py  create_lib.py  process_sdc_constraints.py  yosys_fixup_cell_names.py
f4pga/aux/utils/xc7/: create_ioplace.py  create_place_constraints.py  fix_xc7_carry.py
f4pga/common_modules/: analysis.py  fasm.py  generic_script_wrapper.py  io_rename.py  mkdirs.py  pack.py  place.py  place_constraints.py  route.py  synth.py
f4pga/docs/: DevNotes.md  GettingStarted.md
f4pga/docs/modules/common/: synth.md
f4pga/flows/: __init__.py  argparser.py  cache.py  commands.py  common.py  flow.py  flow_config.py  inspector.py  module.py  module_inspector.py  part_db.yml  platforms.yml  runner.py  stage.py
f4pga/flows/common_modules/: analysis.py  fasm.py  generic_script_wrapper.py  io_rename.py  mkdirs.py  nextpnr_ice40.py  pack.py  place.py  place_constraints.py  route.py  synth.py  yosys.py
f4pga/flows/ice40_modules/: nextpnr.py
f4pga/flows/modules/: analysis.py  fasm.py  io_rename.py  nextpnr_ice40.py  pack.py  place.py  place_constraints.py  route.py  yosys.py
f4pga/flows/tools/: nextpnr.py  vpr.py
f4pga/modules/: fasm.html  generic_script_wrapper.html  index.html  io_rename.html  mkdirs.html  pack.html  place.html  place_constraints.html  route.html  synth.html
f4pga/scripts/xc7/: conv.tcl  f4pga_test.tcl  synth.tcl  utils.tcl
f4pga/sf_common_modules/: fasm.py  generic_script_wrapper.py  io_rename.py  mkdirs.py  pack.py  place.py  place_constraints.py  route.py  synth.py
f4pga/sf_module/: __init__.py
f4pga/utils/: __init__.py  eblif.py  pcf.py  split_inouts.py  vpr_io_place.py  yosys_split_inouts.py
f4pga/utils/quicklogic/: convert_compile_opts.py  pinmap_parse.py  process_sdc_constraints.py  yosys_fixup_cell_names.py
f4pga/utils/quicklogic/pp3/: arch_import.py  connections.py  create_default_fasm.py  create_ioplace.py  create_place_constraints.py  data_import.py  data_structs.py  fasm2bels.py  prepare_vpr_database.py  routing_import.py  rr_utils.py  switchbox_model.py  tile_import.py  timing.py  verilogmodule.py  vis_switchboxes.py
f4pga/utils/quicklogic/qlf_k4n8/: create_ioplace.py
f4pga/utils/quicklogic/repacker/: arch_xml_utils.py  eblif_netlist.py  netlist_cleaning.py  packed_netlist.py  pb_rr_graph.py  pb_rr_graph_netlist.py  pb_rr_graph_router.py  pb_type.py  repack.py
f4pga/utils/xc7/: create_ioplace.py  create_place_constraints.py  fix_xc7_carry.py
f4pga/wrappers/: __init__.py
f4pga/wrappers/sh/: __init__.py  common.f4pga.sh  generate_constraints.py  genfasm.f4pga.sh  genfasm.py  vpr_run.py
f4pga/wrappers/sh/quicklogic/: analysis.f4pga.sh  conda_build_install_package.sh  env  fasm2bels.f4pga.sh  generate_bitstream.f4pga.sh  generate_constraints.f4pga.sh  generate_libfile.f4pga.sh  (+20 more)
f4pga/wrappers/tcl/: __init__.py  __main__.py  eos-s3.f4pga.tcl  ice40.f4pga.tcl  ice40.nextpnr.f4pga.tcl  ice40.vpr.f4pga.tcl  qlf_k4n8.f4pga.tcl  xc7.f4pga.tcl
f4pga/wrappers/xc7/: __init__.py  common.py  place.py  route.py  synth.py  vpr.py  write_fasm.py
(+909 files in other folders)
